add packages & global styles

--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "next": "12.2.2",
+    "persian-number": "^1.5.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.7",
+    "sass": "^1.54.0",
+    "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
     "eslint": "8.19.0",
