--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.9",
     "@reduxjs/toolkit": "^1.8.3",
     "next": "12.2.2",
     "persian-number": "^1.5.1",
@@ -23,7 +22,10 @@
     "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.10",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
