--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/jest": "^29.0.2",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
     "next": "12.2.2",
     "persian-number": "^1.5.1",
-    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-iconly": "^2.2.5",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.7",
     "sass": "^1.54.0",
+    "typescript": "^4.8.3",
     "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
