responsive register page & add types

--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "formik": "^2.2.9",
     "next": "12.2.2",
     "persian-number": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-iconly": "^2.2.5",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.7",
     "sass": "^1.54.0",
     "typescript": "^4.8.3",
-    "vazirmatn": "^33.0.3"
+    "vazirmatn": "^33.0.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.10",
